# self-study-DE-docker

./: .gitignore  README.md
hotel-pipeline/: main.py  pipeline.py  pyproject.toml
pipeline/: Dockerfile  ingest_data.py  notebook.ipynb  pipeline.py  pyproject.toml
test/: file1.txt
