[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
    "psycopg[binary,pool]>=3.3.4",
    "pyarrow>=24.0.0",
    "setuptools>=83.0.0",
    "sqlalchemy>=2.0.51",
    "tqdm>=4.68.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "pgcli>=4.5.0",
]
